--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <!-- <link rel="icon" type="img/jpg" href="Assets/IMG/inon.webp"> -->
   <link rel="stylesheet" href="Assets/CSS/style.css">
 
-  <link rel="stylesheet" type="text/css" href="assets/CSS/bootstrap.css">
-
+<!--   <link rel="stylesheet" type="text/css" href="assets/CSS/bootstrap.css"> -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
   
 
